--- a/Kernel/Kernel.csproj
+++ b/Kernel/Kernel.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Components\AudioSource.cs" />
     <Compile Include="Components\BoxCollider2D.cs" />
+    <Compile Include="Components\Camera.cs" />
     <Compile Include="Components\Collider.cs" />
     <Compile Include="Components\SpriteAnimation.cs" />
     <Compile Include="Components\Component.cs" />
