--- a/3DSolution/3DSolution.csproj
+++ b/3DSolution/3DSolution.csproj
@@ -46,6 +46,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scripts\CameraObject.cs" />
+    <Compile Include="Scripts\Enemy.cs" />
+    <Compile Include="Scripts\EnemySpawner.cs" />
     <Compile Include="Scripts\GameStateManager.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -106,6 +108,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="app.manifest" />
+    <Content Include="Content\Models\lowpoly_max.x">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <None Include="Content\Models\test.x" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\images\background.png">
@@ -130,6 +136,7 @@
       <Name>Kernel</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
