--- a/Kernel/Kernel.csproj
+++ b/Kernel/Kernel.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Components\Model3D.cs" />
     <Compile Include="Components\AudioSource.cs" />
     <Compile Include="Components\BoxCollider2D.cs" />
     <Compile Include="Components\Camera.cs" />
