--- a/Kernel/Kernel.csproj
+++ b/Kernel/Kernel.csproj
@@ -48,6 +48,8 @@
     <Compile Include="Components\BoxCollider2D.cs" />
     <Compile Include="Components\Camera.cs" />
     <Compile Include="Components\Collider.cs" />
+    <Compile Include="Components\ParticleExplosion.cs" />
+    <Compile Include="Components\ParticleSettings.cs" />
     <Compile Include="Components\SpriteAnimation.cs" />
     <Compile Include="Components\Component.cs" />
     <Compile Include="Components\SpriteRenderer.cs" />
